# cascade

./: +NOWNOWNOW.md  .env.example  .gitignore  AGENTS.md  CASCADE-CORE-REVIEW.md  README.md  activity-final.yaml  analytics-final.yaml  builder-after-wait.yaml  builder-final.yaml  builder-review.yaml  builder-step2.yaml  builder-step3.yaml  bunfig.toml  cascade-homepage.yaml  create-modal-biotech.yaml  create-modal-bitcoin.yaml  create-modal-fourth.yaml  create-modal-new.yaml  create-modal-spacex.yaml  create-modal-step2.yaml  create-modal-third.yaml  create-modal-view.yaml  dashboard-activity-final.yaml  dashboard-agents-final.yaml  dashboard-field-library-final.yaml  dashboard-fields-final.yaml  dashboard-final.yaml  dashboard-settings-postcopy-final.yaml  dashboard-treasury-final.yaml  eslint.config.js  home-final.yaml  homepage-after-bitcoin-market.yaml  homepage-after-second-market.yaml  homepage-agent-section.yaml  homepage-initial-view.yaml  homepage-scrolled-view.yaml  homepage-snapshot.yaml  how-it-works-mobile.yaml  index.html  (+25 more)
.next/: trace  trace-build
.playwright-cli/: page-2026-03-28T18-12-36-057Z.yml  page-2026-03-28T18-12-49-088Z.yml  page-2026-03-28T18-13-23-514Z.yml  page-2026-03-28T18-13-42-010Z.yml  page-2026-03-28T18-13-56-052Z.yml  page-2026-03-28T18-14-06-262Z.yml  page-2026-03-28T19-43-53-496Z.yml  page-2026-03-28T19-44-54-155Z.yml  page-2026-03-28T19-45-24-974Z.yml  page-2026-03-28T19-45-38-671Z.yml  page-2026-03-28T19-45-53-220Z.yml  page-2026-03-28T19-46-57-032Z.yml  page-2026-03-28T19-47-04-992Z.yml  page-2026-03-28T19-49-12-321Z.yml  page-2026-03-28T19-49-16-327Z.yml  page-2026-03-28T19-49-26-480Z.yml  page-2026-03-28T22-27-58-896Z.yml  page-2026-03-28T22-29-14-198Z.yml  page-2026-03-28T22-29-32-109Z.yml  page-2026-03-28T22-29-41-660Z.yml  page-2026-03-28T22-29-58-793Z.yml  page-2026-03-28T22-30-06-809Z.yml  page-2026-03-28T22-30-28-298Z.yml  page-2026-03-28T22-30-45-712Z.yml  page-2026-03-28T22-34-17-157Z.yml  page-2026-03-28T22-35-26-869Z.yml  page-2026-03-28T22-36-15-254Z.yml  page-2026-03-28T22-36-33-780Z.yml  page-2026-03-28T22-49-33-355Z.yml  page-2026-03-28T22-50-47-909Z.yml  page-2026-03-28T22-50-51-804Z.yml  page-2026-03-28T22-51-06-970Z.yml  page-2026-03-28T22-51-13-286Z.yml  page-2026-03-28T22-51-44-633Z.yml  page-2026-03-28T22-52-18-551Z.yml  page-2026-03-28T22-53-22-823Z.yml  page-2026-03-28T22-53-28-345Z.yml  page-2026-03-28T22-54-24-810Z.yml  page-2026-03-29T12-10-33-699Z.yml  page-2026-03-29T12-11-25-000Z.yml  (+98 more)
api/: analytics.ts
cascade-mint/: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  config.toml.example  package-lock.json  package.json  tsconfig.json  vercel.json
cascade-mint/.wrangler/tmp/bundle-wMEJhA/: middleware-insertion-facade.js  middleware-loader.entry.ts
cascade-mint/.wrangler/tmp/dev-80JfEj/: pages-shim.js  pages-shim.js.map
cascade-mint/crates/cascade-api/: Cargo.toml
cascade-mint/crates/cascade-api/src/: lib.rs  routes.rs  types.rs
cascade-mint/crates/cascade-api/src/handlers/: market.rs  mod.rs  price.rs  resolve.rs  settlement.rs  trade.rs
cascade-mint/crates/cascade-api/tests/: api_integration.rs
cascade-mint/crates/cascade-core/: Cargo.toml
cascade-mint/crates/cascade-core/src/: db.rs  error.rs  escrow.rs  invoice.rs  lib.rs  lmsr.rs  market.rs  market_manager.rs  nostr_publisher.rs  trade.rs
cascade-mint/crates/cascade-core/src/lightning/: htlc.rs  lnd_client.rs  mod.rs  types.rs
cascade-mint/crates/cascade-core/tests/: mint_integration.rs  resolution_integration.rs  trade_integration.rs
cascade-mint/crates/cascade-mint/: Cargo.toml
cascade-mint/crates/cascade-mint/src/: config.rs  main.rs
cascade-mint/deploy/nginx/: mint.f7z.io
cascade-mint/deploy/systemd/: cascade-mint.service
cascade-mint/migrations/: 001_cascade_tables.sql  002_lightning_escrow.sql
cascade-mint/src/: config.ts  index.ts
cascade-mint/src/database/: index.ts  migrator.ts
cascade-mint/src/migrations/: 001-initial-schema.sql
cascade-mint/src/nostr/: KeysetPublisher.ts  MarketService.ts
cascade-mint/src/routes/: info.ts  mint.ts  swap.ts
cascade-mint/src/services/: KeysetService.ts  MintService.ts  ProofService.ts  SwapService.ts
cascade-mint/src/types/: index.ts
docs/: +NOWNOWNOW.md  BRAND-VOICE-AND-COPY-STRATEGY.md  BRAND-VOICE-COPY-STRATEGY.md  DASHBOARD-BLUEPRINT.md  HOW-IT-WORKS.md  NOWNOWNOW.md  PRODUCT-DECISIONS.md  REACT_MAP.md  README.md  STYLE-GUIDE.md  architectural-review-market-resolution.md  cascade-agent-onboarding-strategy.md  cascade-competitive-landscape.md  cascade-content-strategy.md  cascade-go-to-market.md  cascade-mint-product-spec.md  cascade-roadmap.md  cascade-thesis-creation-ux.md  homepage-hero-density-pass-complete.md  kind-983-trade-event.md  market-creator-agent-spec.md  nostr-kinds.md  rich-user-profiles-architecture.md  svelte-gap-report.md  work-session-state.md
mint/: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  README.md  config.mainnet.toml.example  config.signet.toml.example  config.toml.example  docker-compose.yml
mint/crates/cascade-api/: Cargo.toml
mint/crates/cascade-api/src/: fx.rs  lib.rs  nostr.rs  payment.rs  routes.rs  stripe.rs  types.rs  usdc.rs
mint/crates/cascade-api/src/handlers/: keys.rs  market.rs  mod.rs  price.rs  product.rs  resolve.rs  settlement.rs  trade.rs
mint/crates/cascade-api/tests/: api_integration.rs
mint/crates/cascade-cli/: Cargo.toml
mint/crates/cascade-cli/src/: cli.rs  config.rs  main.rs  proof_store.rs
proposals/: 01-the-terminal.html  02-the-editorial.html  03-the-arena.html  04-the-signal.html  05-the-atlas.html  06-the-front-page.html  07-the-briefing.html  08-the-constellation.html  09-the-argument.html  10-the-exhibition.html  11-the-forum.html  12-the-tribunal.html  13-the-commons.html  14-the-salon.html  15-the-wire.html  16-the-lobby.html  17-the-digest.html  18-market-the-hearing-room.html  19-market-the-dossier.html  20-market-the-annotated-page.html  21-market-the-conversation.html  22-market-the-paper.html  index.html
public/: SKILL.md
scripts/: simulate  (+2 more)
(+828 files in other folders)
