[workspace]
resolver = "2"
members = [
    "crates/cascade-mint",
    "crates/cascade-core",
    "crates/cascade-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# CDK crates
cdk = { version = "0.16", features = ["mint"] }
cdk-axum = "0.16"
cdk-sqlite = { version = "0.16", features = ["mint"] }
cdk-signatory = { version = "0.16" }
cdk-lnd = "0.16"
cdk-common = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP extras
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
toml = "0.8"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Crypto
bitcoin = { version = "0.32", features = ["serde"] }
bip39 = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true