[package]
name = "cascade-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cascade-core = { path = "../cascade-core" }

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CDK integration (mock for now, real version in cdk-axum)
# These are placeholders
axum-macros = "0.4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
