# HTTP API crate

[package]
name = "cascade-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cascade-core.path = "../cascade-core"
cdk.workspace = true
cdk-common.workspace = true
cdk-axum.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
