# Mint binary crate

[package]
name = "cascade-mint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cascade-mint"
path = "src/main.rs"

[dependencies]
cascade-core.path = "../cascade-core"
cascade-api.path = "../cascade-api"
cdk.workspace = true
cdk-axum.workspace = true
cdk-sqlite.workspace = true
cdk-signatory.workspace = true
cdk-lnd.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
dotenvy.workspace = true
clap.workspace = true
anyhow.workspace = true
sqlx.workspace = true
