[package]
name = "cascade-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cascade-core = { path = "../cascade-core" }

# CDK for Mint types
cdk.workspace = true

# Web framework
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CDK integration
cdk-axum.workspace = true

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
bitcoin.workspace = true
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
cdk-sqlite.workspace = true
